# pdfine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/pdfine/: __init__.py  __main__.py  pdfine_compress.py  pdfine_core.py  pdfine_gui.py  pdfine_merge.py
tests/: __init__.py
