[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfine"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-2.0"
keywords = []
authors = [
  { name = "Shall Mcfield", email = "xhall.mc+kreolecoder@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pillow>=12.3.0",
  "pypdf>=6.14.2",
  "typing_extensions>=4.16.0",
]

[project.urls]
Documentation = "https://github.com/KreoleCoder/pdfine#readme"
Issues = "https://github.com/KreoleCoder/pdfine/issues"
Source = "https://github.com/KreoleCoder/pdfine"

[tool.hatch.version]
path = "src/pdfine/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pdfine tests}"

[tool.coverage.run]
source_pkgs = ["pdfine", "tests"]
branch = true
parallel = true
omit = [
  "src/pdfine/__about__.py",
]

[tool.coverage.paths]
pdfine = ["src/pdfine", "*/pdfine/src/pdfine"]
tests = ["tests", "*/pdfine/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.gui-scripts]
pdfine = "pdfine.pdfine_gui:gui_app"